# pipeline-lineage-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
cli/: main.py
core/: dataset.py  lineage.py  pipeline.py  snapshot.py
db/: base.py  models.py
examples/heart_disease/: demo.py
integrations/: mlflow.py  pandas.py  sklearn.py
lineage_cli/: main.py
scripts/: docker_init.py
store/: blob.py  metadata.py
ui/: app.py
