[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-lineage-tracker"
version = "0.1.0"
description = "Data versioning and pipeline lineage tracker for ML engineering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
lineage = "lineage_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "store*", "integrations*", "lineage_cli*", "ui*", "db*"]
